style.css: fix z-index on menu

--- a/gen/website/style.css
+++ b/gen/website/style.css
@@ -105,6 +105,7 @@ img { max-width: 100%; }
     left: 0px;
     height: 100%;
     background: #303133;
+    z-index: 999;
 }
 
 #document {
